# runesinruins

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
core/: CMakeLists.txt
core/sources/: CMakeLists.txt
core/sources/area/: area.cpp  area.h
core/sources/areas/: abstract_area.cpp  abstract_area.h  square_area.cpp  square_area.h
core/sources/common/: core_traits.cpp  core_traits.h  direction.cpp  direction.h  point.cpp  point.h  vec.h
core/sources/cubic_structure/area/: area.cpp  area.h
core/sources/cubic_structure/node/: node.cpp  node.h
core/sources/cubic_structure/space/: abstract_space.h
core/sources/cubic_structure/volume/: volume.cpp  volume.h  volume_iterator.cpp  volume_iterator.h
core/sources/node/: node.cpp  node.h
core/sources/node_objects/: node_object.cpp  node_object.h
core/sources/persisters/: abstract_persister.cpp  abstract_persister.h  fs_persister.cpp  fs_persister.h
core/sources/space/: abstract_space.cpp  abstract_space.h  cache_space.cpp  cache_space.h  cached_space.cpp  cached_space.h
core/sources/volume/: volume.cpp  volume.h  volume_iterator.cpp  volume_iterator.h
core/sources/volume_generators/: abstract_volume_generator.cpp  abstract_volume_generator.h  standart_volume_generator.cpp  standart_volume_generator.h
core/sources/volume_repositories/: abstract_volume_repository.cpp  abstract_volume_repository.h  area_proxy_volume_repository.cpp  area_proxy_volume_repository.h  cache_volume_repository.cpp  cache_volume_repository.h  persistent_volume_repository.cpp  persistent_volume_repository.h  proxy_volume_repository.cpp  proxy_volume_repository.h
core/sources/volume_repository/: abstract_volume_repository.cpp  abstract_volume_repository.h  cache_volume_repository.cpp  cache_volume_repository.h  persistent_volume_repository.cpp  persistent_volume_repository.h  proxy_volume_repository.cpp  proxy_volume_repository.h  volume_repository.cpp  volume_repository.h
core/sources/volume_serializers/: abstract_volume_serializer.cpp  abstract_volume_serializer.h  standart_volume_serializer.cpp  standart_volume_serializer.h
core/tests/: CMakeLists.txt
core/tests/unit_tests/: unit_tests.cpp
core/tests/unit_tests/area_test/: area_test.cpp
core/tests/unit_tests/areas_tests/: abstract_area_test.cpp  abstract_area_test.h  square_area_test.cpp  square_area_test.h
core/tests/unit_tests/common_tests/: core_traits_test.cpp  core_traits_test.h  direction_test.cpp  direction_test.h  point_test.cpp  point_test.h  vec_test.cpp  vec_test.h
core/tests/unit_tests/cubic_structure/area_test/: area_test.cpp  area_test.h
core/tests/unit_tests/cubic_structure/node_test/: node_test.cpp  node_test.h
core/tests/unit_tests/cubic_structure/volume_test/: volume_test.cpp  volume_test.h
core/tests/unit_tests/node_objects_tests/: node_object_test.cpp  node_object_test.h
core/tests/unit_tests/node_tests/: node_test.cpp  node_test.h
core/tests/unit_tests/persisters_tests/: abstract_persister_test.cpp  abstract_persister_test.h  fs_persister_test.cpp  fs_persister_test.h
core/tests/unit_tests/space_tests/: abstract_space_test.cpp  abstract_space_test.h  cache_space_test.cpp  cache_space_test.h  cached_space_test.cpp  cached_space_test.h  space_mock.cpp  space_mock.h
core/tests/unit_tests/volume_generators_tests/: abstract_volume_generator_test.cpp  abstract_volume_generator_test.h  standart_volume_generator_test.cpp  standart_volume_generator_test.h
core/tests/unit_tests/volume_repositories_tests/: abstract_volume_repository_test.cpp  abstract_volume_repository_test.h  area_proxy_volume_repository_test.cpp  area_proxy_volume_repository_test.h  cache_volume_repository_test.cpp  cache_volume_repository_test.h  persistent_volume_repository_test.cpp  persistent_volume_repository_test.h  proxy_volume_repository_test.cpp  proxy_volume_repository_test.h
core/tests/unit_tests/volume_repository_tests/: abstract_volume_repository_test.cpp  abstract_volume_repository_test.h  cache_volume_repository_test.cpp  cache_volume_repository_test.h  proxy_volume_repository_test.cpp  proxy_volume_repository_test.h
core/tests/unit_tests/volume_serializers_tests/: abstract_volume_serializer_test.cpp  abstract_volume_serializer_test.h  standart_volume_serializer_test.cpp  standart_volume_serializer_test.h
core/tests/unit_tests/volume_tests/: volume_test.cpp  volume_test.h
editor/: CMakeLists.txt
editor/qml/: Main.qml
editor/sources/: main.cpp
presentation/: CMakeLists.txt
presentation/sources/: CMakeLists.txt
presentation/sources/volume_render_item/: volume_render_item.cpp  volume_render_item.h
presentation/sources/volume_renderers/: abstract_volume_renderer.cpp  abstract_volume_renderer.h
presentation/tests/: CMakeLists.txt
presentation/tests/unit_tests/: unit_tests.cpp
